[tool.poetry]
name = "kcp.py"
version = "0.1.0"
description = "Python bindings and abstarctions over the KCP protocol. "
authors = ["RealistikDash"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/RealistikDash/kcp.py"
repository = "https://github.com/RealistikDash/kcp.py"

keywords = ["kcp", "python"]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.urls]
Issues = "https://github.com/RealistikDash/kcp.py/issues"

[[tool.poetry.packages]]
include = "kcp"

[[tool.poetry.include]]
path = "kcp/*.so"
format = "wheel"

[[tool.poetry.include]]
path = "kcp/*.pyd"
format = "wheel"

[[tool.poetry.include]]
path = "kcp"
format = "wheel"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry.dependencies]
python = ">= 3.7"

[tool.poetry.group.format]
optional = true

[tool.poetry.group.format.dependencies]
black = "22.8.0"

[tool.poetry.group.format.dependencies.isort]
version = "5.10.1"
python = "^3.7"

[tool.poetry.group.check]
optional = true

[tool.poetry.group.check.dependencies]
mypy = "0.991"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "7.1.3"

[tool.black]
line_length = 100

[tool.isort]
line_length = 100
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
