[tool.poetry]
name = "kcp"
version = "0.1.5"
description = "Python bindings and networking for the KCP protocol."
authors = ["RealistikDash"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/RealistikDash/kcp.py"
repository = "https://github.com/RealistikDash/kcp.py"
documentation = "https://github.com/RealistikDash/kcp.py"

keywords = ["kcp", "server", "client", "async", "asyncio"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.urls]
Issues = "https://github.com/RealistikDash/kcp.py/issues"

[[tool.poetry.packages]]
include = "kcp"

[[tool.poetry.include]]
path = "kcp/*.so"
format = "wheel"

[[tool.poetry.include]]
path = "kcp/*.pyd"
format = "wheel"

[[tool.poetry.include]]
path = "kcp"
format = "wheel"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry.dependencies]
python = ">= 3.7"

[tool.poetry.group.format]
optional = true

[tool.poetry.group.format.dependencies]
black = "23.1.0"

[tool.poetry.group.format.dependencies.isort]
version = "5.11.5"
python = "^3.7"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "7.2.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "1.4.2"
mkdocs-material = "9.1.0"

[tool.poetry.group.docs.dependencies.mkdocstrings]
version = "0.20.0"
extras = ["python"]

[tool.poetry.group.dev.dependencies]
changelogging = "1.1.0"

[tool.black]
line_length = 100

[tool.isort]
line_length = 100
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core >= 1.3.2", "cython == 3.0.11", "entrypoint >= 1.3.0", "setuptools >= 65.6.3"]
build-backend = "poetry.core.masonry.api"
